# rknnlite-ppyoloe-example

./: .gitignore  README.md  main.py  pyproject.toml  rknn_executor.py
