[project]
name = "rknn-ppyoloe-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-contrib-python>=4.11.0.86",
    "opencv-python>=4.11.0.86",
    "rknn-toolkit-lite2",
    "setuptools>=80.9.0",
]

[tool.uv.sources]
rknn-toolkit-lite2 = { path = "./wheels/rknn_toolkit_lite2-2.3.2-cp312-cp312-manylinux_2_17_aarch64.manylinux2014_aarch64.whl" }
